# test

./: .gitignore  README.md  module.py  pyproject.toml  requirements.txt  setup.py  test_module.py
.github/: dependabot.yml
.github/workflows/: python-package.yml
