[project]
name = "test"
version = "0.0.0"
description = "wshno test project"
authors = [
    { name = "Hans Christian Winther-Sørensen", email = "hc@wsh.no" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"

[tool.semantic_release]
version_variable = "setup.py:__version__"
version_toml = "pyproject.toml:project.version"
version_source = "commit"
branch = "main"
upload_to_pypi = false
upload_to_release = true
upload_to_repository = false
commit_message = "semantic release version change commit"
